syntax = "proto3";

import "common.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "PostPigeon.Server";

package profile;

service Profiles {
    rpc GetProfile (GetProfileRequest) returns (Profile); 
    rpc GetProfiles(common.None) returns (stream ProfilesList);
    rpc UpdateProfile (UpdateProfileRequest) returns (common.None);
    rpc ChangeAvatar (ChangeAvatarRequest) returns (common.None);
}

message GetProfileRequest {
    string user_id = 1;
}

message UpdateProfileRequest {
    string username = 1;
    google.protobuf.StringValue password = 2;
    string email = 3;
}

message ChangeAvatarRequest {
    bytes image_bytes = 1;
}

enum UserStatus {
    UNKNOWN = 0;
    ONLINE = 1;
    OFFLINE = 2;
}

message Profile {
    string user_id = 1;
    string username = 2;
    google.protobuf.BytesValue avatar = 3;
    string email = 4;
    UserStatus status = 5;
}

message ProfilesList {
    repeated Profile profiles = 1;
}
  